[gd_scene load_steps=16 format=3 uid="uid://c375f57xjk3vq"]

[ext_resource type="Texture2D" uid="uid://dia8gh4hnqd13" path="res://assets/Ship/sprPlayer_strip16.png" id="1_o7xaa"]
[ext_resource type="Script" path="res://scenes/ship.gd" id="1_pbaj0"]
[ext_resource type="Texture2D" uid="uid://cpjc5k4jpjg12" path="res://assets/draws/arrow.png" id="3_6e5tp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpsal"]
size = Vector2(19, 37)

[sub_resource type="Animation" id="Animation_giqb7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_cskmj"]
resource_name = "backward"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_vuuh7"]
resource_name = "backward-left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_xbidp"]
resource_name = "backward-right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_lthl5"]
resource_name = "forward"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8c6kp"]
resource_name = "forward-left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_n30r2"]
resource_name = "forward-right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}

[sub_resource type="Animation" id="Animation_rhpmm"]
resource_name = "left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_4q81k"]
resource_name = "right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xb0vk"]
_data = {
"RESET": SubResource("Animation_giqb7"),
"backward": SubResource("Animation_cskmj"),
"backward-left": SubResource("Animation_vuuh7"),
"backward-right": SubResource("Animation_xbidp"),
"forward": SubResource("Animation_lthl5"),
"forward-left": SubResource("Animation_8c6kp"),
"forward-right": SubResource("Animation_n30r2"),
"left": SubResource("Animation_rhpmm"),
"right": SubResource("Animation_4q81k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yxfcx"]
radius = 43.0029

[node name="Ship" type="CharacterBody2D"]
z_index = 1
scale = Vector2(1.5, 1.5)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_pbaj0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_o7xaa")
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_rpsal")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xb0vk")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 44)

[node name="arrowNode" type="Node2D" parent="."]

[node name="Arrow" type="Sprite2D" parent="arrowNode"]
position = Vector2(56.5, 0)
scale = Vector2(0.3, 0.5)
texture = ExtResource("3_6e5tp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yxfcx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
